--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>JS DASAR PEMULA</h1>
     <h2>willyg</h2>
-<script src="switch.js"></script>
+<script src="angkot4.js"></script>
 </body>
 </html>
